app/overlay/staging/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: staging
  labels:
    app: frontend
spec:
  ingressClassName: nginx
  rules:
  - host: openetra.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
